2001-05-26  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-decode-buffer): Removed reference of
	`w3m-coding-system'.

2001-05-25  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-dtree.el (w3m-dtree-directory-depth): New variable.
	(w3m-dtree-stop-strings): Ditto.
	(w3m-dtree-create-sub): Add new arugument 'depth'. Stop recursive
	call, if directory-depth over the 'w3m-dtree-directory-depth'.

2001-05-25  NAKAGAWA Takayuki <tknakaga@kanagawa.hitachi.co.jp>

	* w3m-dtree.el (w3m-dtree-create-sub): To avoid infinite recusion,
	directory-files now returns absolute file names and
	expand-file-name is omitted.

2001-05-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-about-history): Get the values of `w3m-current-url'
	and `w3m-history-flat' from the buffer `w3m-current-buffer'.
	(w3m-goto-url): Set the value of `w3m-current-buffer' as the
	current buffer.
	(w3m-current-buffer): New internal variable.

2001-05-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-examine-modules): Made it to return
	w3m-macro.elc and the version specific module first.

	* w3m.el (w3m-setup-menu): Define it if the feature `xemacs' is not
	provided.
	(TopLevel): Don't bind the functions `w3m-display-inline-image-p',
	`w3m-display-graphic-p', `w3m-update-toolbar', `w3m-setup-toolbar',
	`w3m-image-type-available-p', `w3m-insert-image' and
	`w3m-create-image'.
	(w3m-get-buffer-create, w3m-add-text-properties,
	w3m-with-work-buffer): Moved to w3m-macro.el.
	(w3m-charset-coding-system-alist): Use `w3m-find-coding-system'
	directly.
	(w3m-find-coding-system): Moved to the version specific modules.
	(w3m-static-cond, w3m-static-if): Moved to w3m-macro.el.
	(TopLevel): Require `w3m-e20' when the version of the running Emacs
	is neither XEmacs, Emacs 21 nor Mule2.
	(TopLevel): Require `w3m-macro'.

	* w3m-xmas.el (w3m-euc-japan-decoder): Define it when the function
	`ccl-compile-write-multibyte-character' is bound.
	(widget-coding-system-action): Use `eval' instead of the